--- a/shop-user/src/main/resources/static/index.html
+++ b/shop-user/src/main/resources/static/index.html
@@ -1,10 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>用户登录.html</title>
+
+    <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
+    <meta http-equiv="description" content="this is my page">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+
+    <!--<link rel="stylesheet" type="text/css" href="./styles.css">-->
+
 </head>
+
 <body>
-<h1>hello</h1>
+<form name="user" action="#" method="post">
+    <table  align="center">
+        <tr>
+            <td>用户名</td>
+            <td>
+                <input type="username" id="username" />
+            </td>
+        </tr>
+        <tr>
+            <td>密码</td>
+            <td>
+                <input type="password" id="password"/>
+            </td>
+        </tr>
+        <tr>
+            <td>其他</td>
+            <td>
+                <textarea rows="15" cols="50"></textarea>
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <input type="button" value="登录" id="btn"/>
+            </td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
+<script src="jquery-3.5.1.min.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
+    $(function(){
+        $("#btn").click(function() {
+            username = $("#username").val();
+            password = $("#password").val();
+            console.log(username,password);
+            $.ajax({
+                type : 'post',
+                url : '/user/verify',
+                data:JSON.stringify({"username":username,"password":password}),
+                contentType:"application/json;charset=UTF-8",
+                dataType: "json",
+                success :function(data) {
+                    alert("成功：",data);
+                },
+                error : function(d){
+                    console.log(d);
+                }
+            })
+        })
+    })
+</script>
